<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

  <data>
    <variable
        name="hero"
        type="com.heroes.app.data.api.model.Hero"
        />
  </data>

  <FrameLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        >

      <com.google.android.material.appbar.AppBarLayout
          android:layout_width="match_parent"
          android:layout_height="400dp"
          android:animateLayoutChanges="true"
          android:background="@color/red_500"
          android:fitsSystemWindows="true"
          android:stateListAnimator="@animator/toolbar_animator"
          android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
          >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:collapsedTitleGravity="center"
            app:contentScrim="@color/red_500"
            app:title="@{hero.name}"
            app:titleEnabled="true"
            app:toolbarId="@id/toolbar"
            >

          <ImageView
              android:id="@+id/imgPoster"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:fitsSystemWindows="true"
              android:foreground="@drawable/gradient_black_overlay"
              android:scaleType="centerCrop"
              app:layout_collapseMode="parallax"
              />

          <androidx.appcompat.widget.Toolbar
              android:id="@+id/toolbar"
              android:layout_width="match_parent"
              android:layout_height="?attr/actionBarSize"
              app:layout_collapseMode="pin"
              app:contentInsetStartWithNavigation="0dp"
              app:menu="@menu/menu_share"
              app:navigationIcon="@drawable/ic_back"
              app:title="@{hero.name}"
              />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

      </com.google.android.material.appbar.AppBarLayout>

      <androidx.core.widget.NestedScrollView
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:clipToPadding="false"
          app:layout_behavior="@string/appbar_scrolling_view_behavior"
          >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            >

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center"
              android:orientation="horizontal"
              >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                >

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/lbl_full_name"
                  android:textAllCaps="true"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                  android:textStyle="bold"
                  />

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="16dp"
                  android:text="@{hero.biography.fullName}"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                  android:textColor="@color/red_700"
                  />

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/lbl_publisher_name"
                  android:textAllCaps="true"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                  android:textStyle="bold"
                  />

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="16dp"
                  android:text="@{hero.biography.publisher}"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                  android:textColor="@color/red_700"
                  />

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/lbl_place_of_birth"
                  android:textAllCaps="true"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                  android:textStyle="bold"
                  />

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="16dp"
                  android:text="@{hero.biography.placeOfBirth}"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                  android:textColor="@color/red_700"
                  />

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:text="@string/lbl_first_appearance"
                  android:textAllCaps="true"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                  android:textStyle="bold"
                  />

              <TextView
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="16dp"
                  android:text="@{hero.biography.firstAppearance}"
                  android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                  android:textColor="@color/red_700"
                  />

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="130dp"
                android:layout_height="180dp"
                app:cardElevation="4dp"
                >

              <ImageView
                  android:id="@+id/imgCover"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:scaleType="centerCrop"
                  />

            </androidx.cardview.widget.CardView>

          </LinearLayout>

          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="@string/lbl_aliases"
              android:textAllCaps="true"
              android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
              android:textStyle="bold"
              />

          <com.google.android.material.chip.ChipGroup
              android:id="@+id/groupAliases"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              />

        </LinearLayout>

      </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

  </FrameLayout>

</layout>
